--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,3 +1,9 @@
 {
-    "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html",
+      "query": { "tx_ref": ":tx_ref" }
+    }
+  ]
 }
